Fixed issue with submit button not appearing on safari and limit to blind calculations

--- a/frontend/src/components/Vinyl/vinyl.css
+++ b/frontend/src/components/Vinyl/vinyl.css
@@ -85,7 +85,9 @@
   align-items: center;
   margin: 0 auto;
   padding: 0.5rem;
-  background-color: #fff;
+  background-color: #ffffff;
+  border: 2px solid #f9630d;
+  color: #000000;
   border-radius: 1rem;
   font-weight: bold;
   font-size: 1.5rem;
@@ -170,7 +172,7 @@
 
 .fade-out {
   animation: fadeOut 0.4s ease-in-out forwards;
-  display: none !important;
+  opacity: 0 !important;
 }
 
 @keyframes fadeIn {
